--- a/recipe.yaml
+++ b/recipe.yaml
@@ -24,7 +24,7 @@ modifiers:
 
     - !SetLearningRateModifier
         start_epoch: 16.0
-        learning_rate: 0.0001
+        learning_rate: 10e-3
 
     - !EpochRangeModifier
         start_epoch: 0.0
